--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -15,11 +15,11 @@
 <body>
 
 	<!-- 接收作业 -->
-	<div class="pro-div">
+	<div class="pro-div layui-form"  lay-filter="receive-task">
 
 		<!-- 问题处理 -->
 		<div class="layui-collapse" lay-accordion="">
-			<div class="layui-colla-item layui-form">
+			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				
 				<div class="hbtn h2c">
@@ -32,7 +32,7 @@
 						<div class="layui-input-inline layui-input-top">
 							<select class="layui-input  layui-input-one" name="incident_sign"
 								lay-verify="required" >
-								<option value="">其他</option>
+								<option value="0">其他</option>
 								<option value="1">事故事件</option>
 								<option value="2">隐患事件</option>
 							</select>
@@ -43,17 +43,17 @@
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
 							<div class="layui-input-inline layui-input-top">
-								<select id="sele" class="layui-input layui-input-one" name="modules"
+								<select id="sele" class="layui-input layui-input-one" name="remark"
 								lay-verify="required" lay-search="">
-								<option value="setdate">指定日期</option>
-								<option value="overhaul">大修时整改</option>
+								<option value="指定日期">指定日期</option>
+								<option value="大修时整改">大修时整改</option>
 							</select>
 							</div>
 						</div>
 						<div class="layui-inline">
 							<label class="layui-form-label">指定日期</label>
 							<div class="layui-input-inline  layui-input-top">
-								<input type="text" class="layui-input layui-input-one" id="sdate"
+								<input type="text" class="layui-input layui-input-one" id="sdate" name="sdate"
 									placeholder="yyyy-MM-dd">
 							</div>
 						</div>
@@ -114,14 +114,14 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">上&nbsp;报&nbsp;人</label>
 							<div class="layui-input-inline layui-input-top">
-								<input id="applypeople" type="text"
-									class="layui-input layui-input-one" disabled="disabled">
+								<input name="applypeople" type="text"
+									class="layui-input layui-input-one"  disabled="disabled">
 							</div>
 						</div>
 						<div class="layui-inline">
 							<label class="layui-form-label">属地单位</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" id="problemtype"
+								<input type="text" name="problemtype"
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
@@ -131,14 +131,14 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">问题区域</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" id="welName" class="layui-input layui-input-one"
+								<input type="text" name="welName" class="layui-input layui-input-one"
 									disabled="disabled">
 							</div>
 						</div>
 						<div class="layui-inline">
 							<label class="layui-form-label">所属专业</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" id="prob" 
+								<input type="text" name="profession" 
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
@@ -148,7 +148,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">设备定位</label>
 							<div class="layui-input-inline layui-input-top layui-row">
-								<input type="text" id="rfid" class="layui-input layui-input-one" disabled="disabled">
+								<input type="text" name="rfid" class="layui-input layui-input-one" disabled="disabled">
 								<!-- <button class="layui-btn layui-btn-xs layui-col-md4 layui-col-md-offset1" style="height: 25px;">定位设备</button> -->
 							</div>
 				
@@ -156,7 +156,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">问题类别</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" id="problemclass" lay-verify="email"
+								<input type="text" name="problemclass" lay-verify="email"
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
@@ -172,43 +172,12 @@
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">问题图片</label>
 						<div class="layui-input-block">
-							<div class="layui-carousel" id="test1" lay-filter="test1">
-								<div carousel-item="" id="imag">
-									<!--  <div>
-									<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-									<img alt="图片2" src="../jsPackage/layui-v2.4.2//images/问题上报/u154.png"> 
-									<img alt="图片3" src="../jsPackage/layui-v2.4.2//images/问题上报/u152.png">
+							<div class="layui-carousel" id="problem_image" lay-filter="test1">
+								<div carousel-item>
+								<div><img alt="图片1" style="width:700px; height:400px; margin: 0px;" src="/iot_process/image/test4/2019-06-05/11411730697916.png"></div>
+								<div><img alt="图片2" style="width:700px; height:400px; margin: 0px;" src="/iot_process/image/test4/2019-06-05/11411730712427.png"></div>
+								<div><img alt="图片3" style="width:700px; height:400px; margin: 0px;" src="/iot_process/image/test4/2019-06-05/11411736962566.png"></div>
 								</div>
-								<div>
-									<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-									<img alt="图片2" src="../jsPackage/layui-v2.4.2//images/问题上报/u154.png"> 
-								</div>
-								<div>
-									<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-								</div>
-								<div>
-									<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-									<img alt="图片2" src="../jsPackage/layui-v2.4.2//images/问题上报/u154.png"> 
-									<img alt="图片3" src="../jsPackage/layui-v2.4.2//images/问题上报/u152.png">
-								</div>
-								<div>
-									<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-									<img alt="图片2" src="../jsPackage/layui-v2.4.2//images/问题上报/u154.png"> 
-									<img alt="图片3" src="../jsPackage/layui-v2.4.2//images/问题上报/u152.png">
-								</div>
-								<div>
-									<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-									<img alt="图片2" src="../jsPackage/layui-v2.4.2//images/问题上报/u154.png"> 
-									<img alt="图片3" src="../jsPackage/layui-v2.4.2//images/问题上报/u152.png">
-								</div>
-							</div> -->
-									<!-- </div>
-						<img alt="图片1" src="../jsPackage/layui-v2.4.2/images/问题上报/u156.png">
-							<img alt="图片2" src="../jsPackage/layui-v2.4.2//images/问题上报/u154.png"> 
-							<img alt="图片3" src="../jsPackage/layui-v2.4.2//images/问题上报/u152.png">
-						</div> -->
-								</div>
-
 							</div>
 						</div>
 					</div>
@@ -231,7 +200,7 @@
 	</div>
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
-	<script type="text/javascript" src="../js/estimate.js"></script>
+	<!-- <script type="text/javascript" src="../js/estimate.js"></script> -->
 	<script type="text/javascript" src="../js/receive-task.js"></script>
 </body>
 </html>
