上报人验证更新

--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -56,7 +56,7 @@
 			    <div class="layui-inline"> 
 			      <label class="text-font layui-form-label">上 报 人</label>
 			      <div class="layui-input-inline">
-			        <input type="text" id="input-report" name="applypeople" lay-verify="required|applypeople" placeholder="请输入上报人" class="layui-input">
+			        <input type="text" id="applypeople" name="applypeople" lay-verify="required|applypeople" placeholder="请输入上报人" class="layui-input">
 			      </div>
 			    </div>
 			    <div class="layui-inline">
