--- a/src/main/resources/static/html/estimate.html
+++ b/src/main/resources/static/html/estimate.html
@@ -183,7 +183,10 @@
 						<div class="layui-input-block">
 							<div class="layui-carousel imgshow" lay-filter="test1">
 								<div carousel-item="" id="imag">
-									
+								<!-- <div>
+									<img alt="432" src="../images/report/u170.png">
+									<img alt="432" src="../images/report/u166.png">
+									</div> -->
 								</div>
 
 							</div>
@@ -206,9 +209,11 @@
 		</div>
 
 	</div>
-	<!-- <script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script> -->
+	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../js/estimate_1.js"></script>
 	<script type="text/javascript" src="../js/tree_util.js"></script>
 	<script type="text/javascript" src="../js/estimate.js"></script>
 	<script type="text/javascript" src="../js/organization_tree.js"></script>
