--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -137,7 +137,7 @@
 				  <div class="layui-input-inline" style="width: 120px;">
 				    <input name="rfid" class="layui-input" lay-verify="required" type="text" placeholder="请输入设备位号"/>
 				  </div>
-				  <button class="layui-btn layui-btn-sm" style="height: 38px;">定位设备</button>
+				  <button type="button" class="layui-btn layui-btn-sm" style="height: 38px;" onclick="return false;">定位设备</button>
 			    </div>
 			    <div class="layui-inline">
 			      <label class="text-font layui-form-label">问题类别</label>
