--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -200,6 +200,7 @@
 
 	</div>
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
+	<script src="../jsPackage/own/universal.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<!-- <script type="text/javascript" src="../js/estimate.js"></script> -->
 	<script type="text/javascript" src="../js/receive-task.js"></script>
