--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -70,7 +70,9 @@
 					<div>
 						<label class="layui-form-label">处理过程</label>
 						<div class="layui-input-block right-marg">
-							<table class="layui-table layui-input-block tdp">
+							<table id="process-table"></table>
+							
+							<!-- <table class="layui-table layui-input-block tdp">
 								<colgroup>
 									<col width="150">
 									<col width="150">
@@ -95,7 +97,7 @@
 										<td></td>
 									</tr>
 								</tbody>
-							</table>
+							</table> -->
 						</div>
 					</div>
 
@@ -172,11 +174,9 @@
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">问题图片</label>
 						<div class="layui-input-block">
-							<div class="layui-carousel" id="problem_image" lay-filter="test1">
-								<div carousel-item>
-								<div><img alt="图片1" style="width:700px; height:400px; margin: 0px;" src="/iot_process/image/test4/2019-06-05/11411730697916.png"></div>
-								<div><img alt="图片2" style="width:700px; height:400px; margin: 0px;" src="/iot_process/image/test4/2019-06-05/11411730712427.png"></div>
-								<div><img alt="图片3" style="width:700px; height:400px; margin: 0px;" src="/iot_process/image/test4/2019-06-05/11411736962566.png"></div>
+							<div class="layui-carousel imgshow" lay-filter="test1">
+								<div carousel-item="" id="imag">
+									
 								</div>
 							</div>
 						</div>
@@ -199,6 +199,7 @@
 
 	</div>
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
+	<script src="../jsPackage/own/universal.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<!-- <script type="text/javascript" src="../js/estimate.js"></script> -->
 	<script type="text/javascript" src="../js/receive-task.js"></script>
