--- a/src/main/resources/static/html/acceptance.html
+++ b/src/main/resources/static/html/acceptance.html
@@ -217,6 +217,6 @@
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
-	<script type="text/javascript" src="../js/acceptance.js"></script>
+	<script type="text/javascript" src="../js/estimate_1.js"></script>
 </body>
 </html>
