--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -81,8 +81,8 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea name="title" id="input_localName" placeholder="请输入内容"
-								class="layui-textarea" lay-verify="required" name="desc">250-GT-115分析化验one</textarea>
+							<textarea name="comment" id="input_localName" placeholder="请输入内容"
+								class="layui-textarea" lay-verify="required" name="desc"></textarea>
 						</div>
 					</div>
 
@@ -192,6 +192,7 @@
 	</div>
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script type="text/javascript" src="../js/receive-task.js"></script>
 	<script type="text/javascript" src="../js/finish-task.js"></script>
 </body>
