--- a/src/main/resources/static/html/acceptance.html
+++ b/src/main/resources/static/html/acceptance.html
@@ -28,7 +28,7 @@
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">现场施工图</label>
 						<div class="layui-input-block">
-							<div class="layui-carousel imgshow" id="test1" lay-filter="test1">
+							<div class="layui-carousel imgshow" id="doimg-div" lay-filter="test1">
 								<div carousel-item="" id="doimg">
 									
 								</div>
@@ -73,7 +73,7 @@
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
 							<textarea name="tite" id="comment" placeholder="请输入内容"
-								class="layui-textarea" name="desc">250-GT-115分析化验one</textarea>
+								class="layui-textarea" name="desc"></textarea>
 						</div>
 					</div>
 
@@ -182,7 +182,7 @@
 						<label class="layui-form-label">问题描述</label>
 						<div class="layui-input-block right-marg">
 							<textarea name="title" id="problem_describe" placeholder="请输入内容"
-								class="layui-textarea" name="desc"></textarea>
+								class="layui-textarea" name="desc"  disabled="disabled"></textarea>
 						</div>
 					</div>
 
@@ -218,5 +218,6 @@
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
+	<script type="text/javascript" src="../js/acceptance.js"></script>
 </body>
 </html>
