--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -150,7 +150,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">问题类别</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" id="problemclass" lay-verify="email"
+								<input type="text" id="problemclass" 
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
