--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -150,7 +150,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">问题类别</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" id="problemclass" lay-verify="email"
+								<input type="text" id="problemclass"
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
@@ -159,7 +159,7 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">问题描述</label>
 						<div class="layui-input-block right-marg">
-							<textarea name="title" id="problem_describe" disabled class="layui-textarea" name="desc"></textarea>
+							<textarea name="problem_describe" id="problem_describe" disabled class="layui-textarea"></textarea>
 						</div>
 					</div>
 
