作业评估更新

--- a/src/main/resources/static/html/acceptance.html
+++ b/src/main/resources/static/html/acceptance.html
@@ -42,9 +42,6 @@
 						<div class="layui-input-inline layui-input-top">
 							<select class="layui-input  layui-input-one" name="ticketNo" id="ticketNo"
 								lay-verify="required" lay-search="" disabled="disabled">
-								<option value="其他事件">其他事件</option>
-								<option value="事故事件">事故事件</option>
-								<option value="隐患事件">隐患事件</option>
 							</select>
 						</div>
 					</div>
@@ -55,8 +52,6 @@
 							<div class="layui-input-inline layui-input-top">
 								<select id="sele" class="layui-input layui-input-one" name="remark"
 								lay-verify="required" lay-search="" disabled="disabled">
-								<option value="指定日期">指定日期</option>
-								<option value="大修时整改">大修时整改</option>
 							</select>
 							</div>
 						</div>
@@ -64,7 +59,7 @@
 							<label class="layui-form-label">指定日期</label>
 							<div class="layui-input-inline  layui-input-top">
 								<input type="text" class="layui-input layui-input-one" id="sdate"
-									name="rectificationperiod" placeholder="yyyy-MM-dd" disabled="disabled">
+									name="rectificationperiod" disabled="disabled">
 							</div>		  
 						</div>
 					</div>
