--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -178,7 +178,7 @@
 			  <div class="layui-form-item">
 			      <label class="text-font layui-form-label">问题描述</label>
 			      <div class="layui-input-block">
-			        <textarea name="problemdescribe" rows="5" cols="70" lay-verify="required" placeholder="请输入问题描述">250-GT-115分析化验</textarea>
+			        <textarea name="problemdescribe" id="problemdescribe" rows="5" cols="70" lay-verify="required" placeholder="请输入问题描述"></textarea>
 			      </div>
 			  </div>
 			  
