--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -8,9 +8,7 @@
 <title>接收作业</title>
 <link rel="stylesheet" href="../jsPackage/layui-v2.4.2/css/layui.css" media="all">
 <link rel="stylesheet" href="../css/estimate.css" media="all">
-<style type="text/css">
-	
-</style>
+<link rel="stylesheet" href="../css/receive-task.css" media="all">
 </head>
 <body>
 
@@ -153,11 +151,8 @@
 
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">问题图片</label>
-						<div class="layui-input-block">
-							<div class="layui-carousel imgshow" lay-filter="test1">
-								<div carousel-item="" id="imag">
-									
-								</div>
+						<div class="layui-input-block" style="height: 150px;">
+							<div class="layui-carousel" id="imag">
 							</div>
 						</div>
 					</div>
