--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -202,10 +202,15 @@
 	  		  </div>
 			 </div>
 
-			  <div class="layui-form-item">
+			  <div class="layui-form-item" id="problem_report" style="display: none;">
 			  	<div class="layui-col-md-offset5">
 				    <button class="layui-btn saveBtn" lay-submit lay-filter="saveBtn" id="saveBtn">暂存</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				    <button class="layui-btn" type="button" lay-submit lay-filter="problem_report">问题上报</button>
+			    </div>
+			 </div>
+			 <div class="layui-form-item" id="problem_back" style="display: none;">
+			  	<div class="layui-col-md-offset5">
+				    <button class="layui-btn" type="button" lay-submit lay-filter="problem_report_again">问题上报</button>
 			    </div>
 			 </div>
 		   </form>
