--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -62,7 +62,7 @@
 									class="layui-input layui-input-one" lay-verify="required"  disabled="disabled">
 							</div>
 						</div>
-						<div class="layui-inline">
+						<div class="layui-inline" id="sdate-div" style="display: none;">
 							<label class="layui-form-label">指定日期</label>
 							<div class="layui-input-inline  layui-input-top">
 								<input type="text" class="layui-input layui-input-one" id="sdate" name="sdate"
