--- a/src/main/resources/static/html/organization_tree_repair.html
+++ b/src/main/resources/static/html/organization_tree_repair.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>人员组织树（维修）</title>
+<title>人员组织树</title>
 <link rel="stylesheet" href="../jsPackage/layui-v2.4.2/css/layui.css"
 	media="all">
 </head>
 <body>
-	<div id="work_plan_tree1" class="" check-data></div>
-
+	<div id="work_plan_tree" class="" check-data></div>
 
 </body>
 
@@ -16,5 +15,5 @@
 <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="../js/tree_util.js"></script>
 <script type="text/javascript" src="../js/url_param.js"></script>
-<script type="text/javascript" src="../js/organization_tree_problemtype.js"></script>
+<script type="text/javascript" src="../js/organization_tree_repair.js"></script>
 </html>
