--- a/src/main/resources/static/html/estimate-team-leader.html
+++ b/src/main/resources/static/html/estimate-team-leader.html
@@ -5,9 +5,6 @@
 <title>问题评估（班组长评估）</title>
 <link rel="stylesheet" href="../jsPackage/layui-v2.4.2/css/layui.css" media="all">
 <link rel="stylesheet" href="../css/estimate.css" media="all">
-<style type="text/css">
-	
-</style>
 </head>
 <body>
 
@@ -22,19 +19,21 @@
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe">回退</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete">闭环处理</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="work_plan"  data-method="offset" data-type="t" >作业安排</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="coordinate"   data-method="offset" data-type="t" >下一步</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="coordinate"  data-method="offset" data-type="t" >下一步</button>
 				</div>
+				
+				<div id="coordinate_tree"></div>
 				
 				<div class="layui-colla-content layui-show" >
 					<form id="estimate">
-					<div class="layui-inline">
+					<div class="layui-form-item">
 						<label class="layui-form-label labelr">事件/隐患标记</label>
-						<div class="layui-input-inline layui-input-top">
+						<div class="layui-input-inline layui-input-top layui-form">
 							<select class="layui-input  layui-input-one" name="ticketNo" id="ticketNo"
 								lay-verify="required" lay-search="">
-								<option value="其他事件">其他事件</option>
-								<option value="事故事件">事故事件</option>
-								<option value="隐患事件">隐患事件</option>
+								<option value="0">其他事件</option>
+								<option value="1">事故事件</option>
+								<option value="2">隐患事件</option>
 							</select>
 						</div>
 					</div>
@@ -42,7 +41,7 @@
 					<div class="layui-form-item">
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
-							<div class="layui-input-inline layui-input-top">
+							<div class="layui-input-inline layui-input-top layui-form">
 								<select id="sele" class="layui-input layui-input-one" name="remark"
 								lay-verify="required" lay-search="">
 								<option value="指定日期">指定日期</option>
@@ -196,6 +195,8 @@
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../js/tree_util.js"></script>
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
+	<script type="text/javascript" src="../js/estimate-team-leader.js"></script>
 </body>
 </html>
