--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -50,7 +50,7 @@
 						<label class="layui-form-label labelr">事件/隐患标记</label>
 						<div class="layui-input-inline layui-input-top">
 							<input name="incident_sign" type="text"
-									class="layui-input layui-input-one" lay-verify="required"  disabled="disabled">
+									class="layui-input layui-input-one" disabled="disabled">
 						</div>
 					</div>
 					
@@ -59,7 +59,7 @@
 							<label class="layui-form-label labelr">整改日期</label>
 							<div class="layui-input-inline layui-input-top">
 								<input name="remark" type="text"
-									class="layui-input layui-input-one" lay-verify="required"  disabled="disabled">
+									class="layui-input layui-input-one"   disabled="disabled">
 							</div>
 						</div>
 						<div class="layui-inline" id="sdate-div" style="display: none;">
@@ -161,7 +161,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">具体行为</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" name="remarksix" lay-verify="required"
+								<input type="text" name="remarksix" 
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
