--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -24,15 +24,15 @@
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn"  lay-submit lay-filter="next_step">下一步</button>
 				</div>
 				<div class="layui-colla-content layui-show">
-
-					<div class="layui-inline">
-						<label class="layui-form-label labelr">事件/隐患标记</label>
-						<div class="layui-input-inline layui-input-top">
-							<input name="incident_sign" type="text"
-									class="layui-input layui-input-one"   disabled="disabled">
+					<div class="layui-form-item">
+						<div class="layui-inline">
+							<label class="layui-form-label labelr">事件/隐患标记</label>
+							<div class="layui-input-inline layui-input-top">
+								<input name="incident_sign" type="text"
+										class="layui-input layui-input-one"   disabled="disabled">
+							</div>
 						</div>
 					</div>
-					
 					<div class="layui-form-item">
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
