--- a/src/main/resources/static/html/estimate-team-leader.html
+++ b/src/main/resources/static/html/estimate-team-leader.html
@@ -19,10 +19,12 @@
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe">回退</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete">闭环处理</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="work_plan"  data-method="offset" data-type="t" >作业安排</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="coordinate"  data-method="offset" data-type="t" >下一步</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="estimate_next"  data-method="offset" data-type="t" >下一步</button>
 				</div>
 				
 				<div id="coordinate_tree"></div>
+				<div id="repair_cadre_tree"></div>
+				<div id="estimate_cadre_tree"></div>
 				
 				<div class="layui-colla-content layui-show" >
 					<form id="estimate">
@@ -191,9 +193,9 @@
 		</div>
 
 	</div>
-	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
-	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
+	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../js/tree_util.js"></script>
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
