# WARNING: head commit changed in the meantime
Merge branch 'master' of https://github.com/soa-iot/iot_process.git

Conflicts:
	.bpmn/src/main/resources/process/repairProcess.bpmn2d
	src/main/resources/process/repairProcess.png

--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -29,7 +29,7 @@
 						<label class="layui-form-label labelr">事件/隐患标记</label>
 						<div class="layui-input-inline layui-input-top">
 							<input name="incident_sign" type="text"
-									class="layui-input layui-input-one" lay-verify="required"  disabled="disabled">
+									class="layui-input layui-input-one"   disabled="disabled">
 						</div>
 					</div>
 					
@@ -38,7 +38,7 @@
 							<label class="layui-form-label labelr">整改日期</label>
 							<div class="layui-input-inline layui-input-top">
 								<input name="remark" type="text"
-									class="layui-input layui-input-one" lay-verify="required"  disabled="disabled">
+									class="layui-input layui-input-one"   disabled="disabled">
 							</div>
 						</div>
 						<div class="layui-inline" id="sdate-div" style="display: none;">
@@ -54,7 +54,7 @@
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
 							<textarea name="comment" id="input_localName" placeholder="请输入内容"
-								class="layui-textarea" lay-verify="required" name="desc"></textarea>
+								class="layui-textarea" lay-verify="required" ></textarea>
 						</div>
 					</div>
 
@@ -118,7 +118,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">问题类别</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" name="problemclass" lay-verify="required"
+								<input type="text" name="problemclass" 
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
@@ -136,7 +136,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label">具体行为</label>
 							<div class="layui-input-inline layui-input-top">
-								<input type="text" name="remarksix" lay-verify="required"
+								<input type="text" name="remarksix" 
 									class="layui-input  layui-input-one" disabled="disabled">
 							</div>
 						</div>
