--- a/src/main/resources/static/html/pending-problem.html
+++ b/src/main/resources/static/html/pending-problem.html
@@ -83,7 +83,7 @@
 			    		break;
 			    	case "净化工段":
 			    	case "化验":
-		    		html="estimate-pure.html";
+		    		html="estimate-team-leader.html";
 		    		break;
 		    		default:
 		    			html="estimate-repair.html";
