--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -25,14 +25,16 @@
 				</div>
 				<div class="layui-colla-content layui-show">
 
-					<div class="layui-inline">
-						<label class="layui-form-label labelr">事件/隐患标记</label>
-						<div class="layui-input-inline layui-input-top">
-							<input name="incident_sign" type="text"
-									class="layui-input layui-input-one"   disabled="disabled">
+					<div class="layui-form-item">
+						<div class="layui-inline">
+							<label class="layui-form-label labelr">事件/隐患标记</label>
+							<div class="layui-input-inline layui-input-top">
+								<input name="incident_sign" type="text"
+										class="layui-input layui-input-one"   disabled="disabled">
+							</div>
+
 						</div>
 					</div>
-					
 					<div class="layui-form-item">
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
@@ -54,7 +56,9 @@
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
 							<textarea name="comment" id="input_localName" placeholder="请输入内容"
+
 								class="layui-textarea" lay-verify="required"></textarea>
+
 						</div>
 					</div>
 
