--- a/src/main/resources/static/html/estimate-team-leader.html
+++ b/src/main/resources/static/html/estimate-team-leader.html
@@ -193,7 +193,9 @@
 		</div>
 
 	</div>
-	<script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
+
+	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
+
 	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
