--- a/src/main/resources/static/html/estimate-team-leader.html
+++ b/src/main/resources/static/html/estimate-team-leader.html
@@ -64,7 +64,7 @@
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
 							<textarea name="tite" id="comment" placeholder="请输入内容"
-								class="layui-textarea" name="desc">250-GT-115分析化验one</textarea>
+								class="layui-textarea" name="desc"></textarea>
 						</div>
 					</div>
 
@@ -195,7 +195,7 @@
 	</div>
 
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
-
+	<script type="text/javascript" src="../js/global.js"></script>
 	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
