--- a/src/main/resources/static/html/estimate-repair.html
+++ b/src/main/resources/static/html/estimate-repair.html
@@ -18,9 +18,9 @@
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" lay-filter="back_previous">回退</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="complete" lay-filter="complete">闭环处理</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit lay-filter="complete">闭环处理</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="work_assignment" data-method="offset" data-type="t" lay-filter="assignment">作业指派</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="coordinate" data-method="offset" data-type="t" lay-filter="out_coordinate">外部协调</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit data-method="offset" data-type="t" lay-filter="out_coordinate">外部协调</button>
 				</div>
 				
 				<div class="layui-colla-content layui-show" >
