--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -222,6 +222,8 @@
 	<script src="../jsPackage/own/universal.js"></script>
     <!-- 引入layui -->
     <script type="text/javascript" src="../jsPackage/layui-v2.4.2/layui.js"></script>
+   
+      <script type="text/javascript" src="../js/url_param.js"></script>
     <script type="text/javascript" src="../js/report.js"></script>
     <script type="text/javascript">
     	//加载layui内置模块
