--- a/src/main/resources/static/html/pending-problem.html
+++ b/src/main/resources/static/html/pending-problem.html
@@ -72,7 +72,7 @@
 		    if(layEvent === 'edit'){
 		    	//根据属地判断跳转页面
 		    	
-		    	var  toHtml={"作业接收":"receive-task.html","作业完成":"finish-task.html","作业验收":"acceptance.html","净化分配":"","维修分配":""};
+		    	var  toHtml={"问题上报":'report.html',"作业接收":"receive-task.html","作业完成":"finish-task.html","作业验收":"acceptance.html","净化分配":"estimate-pure.html","维修分配":"estimate-repair.html"};
 		    	if(data.currentnode=="问题评估"){
 			    	switch(data.area){
 			    	case "HSE办公室":
