--- a/src/main/resources/static/html/estimate-pure.html
+++ b/src/main/resources/static/html/estimate-pure.html
@@ -12,7 +12,7 @@
 	<div class="pro-div">
 
 		<!-- 问题处理 -->
-		<div class="layui-collapse" lay-accordion="">
+		<div class="layui-collapse layui-form" lay-accordion="">
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
@@ -27,7 +27,7 @@
 					<form id="estimate">
 					<div class="layui-form-item">
 						<label class="layui-form-label labelr">事件/隐患标记</label>
-						<div class="layui-input-inline layui-input-top layui-form">
+						<div class="layui-input-inline layui-input-top">
 							<select class="layui-input  layui-input-one layui-form" name="ticketNo" id="ticketNo"
 								lay-verify="required" lay-search="">
 								<option value="0">其他事件</option>
@@ -40,9 +40,9 @@
 					<div class="layui-form-item">
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
-							<div class="layui-input-inline layui-input-top  layui-form">
+							<div class="layui-input-inline layui-input-top">
 								<select id="sele" class="layui-input layui-input-one" name="remark"
-								lay-verify="required" lay-search="">
+								lay-verify="required"  lay-filter="dateChange"   lay-search="">
 								<option value="指定日期">指定日期</option>
 								<option value="大修时整改">大修时整改</option>
 							</select>
@@ -202,13 +202,14 @@
 		</div>
 
 	</div>
-	<!-- <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script> -->
+
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../js/tree_util.js"></script>
 	<script type="text/javascript" src="../js/global.js"></script>
 	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="../js/url_param.js"></script>
+
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
 	<script type="text/javascript" src="../js/estimate-pure.js"></script>
 </body>
