--- a/src/main/resources/static/html/estimate-repair.html
+++ b/src/main/resources/static/html/estimate-repair.html
@@ -17,11 +17,10 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
-
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" lay-filter="back_previous">回退</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="complete" lay-filter="complete">闭环处理</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit lay-filter="complete">闭环处理</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="work_assignment" data-method="offset" data-type="t" lay-filter="assignment">作业指派</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="coordinate" data-method="offset" data-type="t" >外部协调</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit data-method="offset" data-type="t" lay-filter="out_coordinate">外部协调</button>
 				</div>
 				
 				<div class="layui-colla-content layui-show" >
@@ -190,6 +189,8 @@
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/own/universal.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../js/tree_util.js"></script>
+	<script type="text/javascript" src="../js/global.js"></script>
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
 	<script type="text/javascript" src="../js/estimate-repair.js"></script>
 </body>
