--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -190,13 +190,11 @@
 	                    <div class="layui-input-inline" id="addProblemImg">
 	                         <button type="button" class="layui-btn">选择图片</button> 
 	                    </div>
-	                    <img class="img" src="../images/report/u166.png"/>
-	                    <span class="text-font-warm">最多允许上传三张图片</span>
 	                </div>
 					<div id="problem-img" style="display: none;">
 					  <label class="layui-form-label">&nbsp;</label>
 					  <div class="layui-input-inline">
-						  <ul id="imgZmList"></ul>
+						  <ul id="imgZmList" style="width:550px"></ul>
 					  </div>
 					</div>
 	  		  </div>
