--- a/src/main/resources/static/html/estimate-repair.html
+++ b/src/main/resources/static/html/estimate-repair.html
@@ -17,7 +17,7 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" lay-filter="back_previous">回退</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit lay-filter="back_previous">回退</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit lay-filter="complete">闭环处理</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="work_assignment" data-method="offset" data-type="t" lay-filter="assignment">作业指派</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit data-method="offset" data-type="t" lay-filter="out_coordinate">外部协调</button>
@@ -41,7 +41,7 @@
 							<div class="layui-input-inline layui-input-top layui-form">
 							<select class="layui-input layui-input-one" id="sele" name="remark" lay-filter="dateChange">
 								<option value="指定日期">指定日期</option>
-								<option value="大修时整改">大修时整改</option>
+								<option value="大修时整改" selected="selected">大修时整改</option>
 							</select>
 							</div>
 						</div>
@@ -57,7 +57,7 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea id="comment" lay-verify="required" placeholder="请输入内容"
+							<textarea id="comment" name="comment" lay-verify="required" placeholder="请输入内容"
 								class="layui-textarea"></textarea>
 						</div>
 					</div>
