--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -49,6 +49,8 @@
 			        <input type="text" name="applydate" style="display: none;" class="layui-input">
 			        <!-- 问题上报部门 -->
 			      	<input type="text" name="dept" style="display: none;" class="layui-input">
+			      	<!-- 问题上报状态 -->
+			      	<input type="text" name="problemstate" value="UNFINISHED" style="display: none;" class="layui-input">
 			      </div>
 			    </div>
 		  	 	</div>
