--- a/src/main/resources/static/html/estimate-repair.html
+++ b/src/main/resources/static/html/estimate-repair.html
@@ -178,7 +178,7 @@
 				<div class="layui-colla-content layui-show">
 					<div class="btn-div">
 						<a class="pbtn problem_describe" href="wwww.baidu.com">脚手架搭拆申请单</a>
-						<a class="pbtn problem_describe" href="wwww.baidu.com">防腐（保温）申请单</a>button class="layui-btn layui-btn-normal layui-btn-sm pbtn problem_describe">防腐（保温）申请单</button>
+						<a class="pbtn problem_describe" href="wwww.baidu.com">防腐（保温）申请单</a>
 					</div>
 				</div>
 			</div>
