自动补全，日期格式优化

--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -9,6 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link rel="stylesheet" href="../jsPackage/layui-v2.4.2/css/layui.css">
     <link rel="stylesheet" href="../css/report.css" media="all">
+    <link href="../css/jquery-ui.css" rel="stylesheet">
+	<link href="../css/autoFill.css" rel="stylesheet">
    <!-- <script type="text/javascript" src="../js/upload/move.js"></script> -->
      <script type="text/javascript" src="../js/report-publishImg.js"></script>
      <style type="text/css">
@@ -176,6 +178,7 @@
 			      <div class="layui-input-block">
 			        <textarea name="problemdescribe" id="problemdescribe" rows="5" cols="70" lay-verify="required" placeholder="请输入问题描述"></textarea>
 			      </div>
+			      <div class="show_div"></div>
 			  </div>
 			  
 			   <div class="layui-form-item" style="margin-bottom: 0px ">
@@ -216,7 +219,8 @@
 
     <script type="text/javascript" src="../jsPackage/layui-v2.4.2/layui.js"></script>
     <script type="text/javascript" src="../js/url_param.js"></script>
-
+	<script type="text/javascript" src="../jsPackage/js/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="../js/autoFill.js"></script>
     <script type="text/javascript" src="../js/report.js"></script>
   </body>
 </html>
