--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -31,7 +31,7 @@
 	  <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->  
   
-    <div id="base" class="layui-container" style="padding-left:0px;">
+    <div id="base" class="layui-container" style="padding-left:0px; margin-left:0px; width:900px;">
 	      <!-- (问题信息) -->
 		  <div class="layui-row">
 		  	 <!-- <div class="layui-col-xs1 layui-col-md2">&nbsp;</div> -->
@@ -57,6 +57,7 @@
 			        <input type="text" id="applypeople" name="applypeople" lay-verify="required|applypeople" placeholder="请输入上报人" class="layui-input">
 			      </div>
 			    </div>
+			    <div class="layui-inline">&nbsp;</div>
 			    <div class="layui-inline">
 			      <label class="text-font layui-form-label">属地单位</label>
 			      <div class="layui-input-inline">
@@ -108,6 +109,7 @@
 			        </select>
 			      </div>
 			    </div>
+			    <div class="layui-inline">&nbsp;</div>
 			    <div class="layui-inline">
 			      <label class="text-font layui-form-label">所属专业</label>
 			      <div id="test-select" class="layui-input-inline">
@@ -137,6 +139,7 @@
 				  </div>
 				  <button type="button" class="layui-btn layui-btn-sm" style="height: 38px;" onclick="return false;">定位设备</button>
 			    </div>
+			    <div class="layui-inline">&nbsp;</div>
 			    <div class="layui-inline">
 			      <label class="text-font layui-form-label">问题类别</label>
 			      <div class="layui-input-inline">
