--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -191,7 +191,7 @@
 			<button type="button" class="layui-btn layui-btn-danger" id="delete">
 				<i class="layui-icon">&#xe640;</i>删除
 			</button> 
-			<button type="button" class="layui-btn layui-btn-normal" data-type="reload" id="query">
+			<button type="button" class="layui-btn layui-btn-normal" data-type="reload" lay-event="querydata">
 				<i class="layui-icon">&#xe615;</i>查询
 			</button>  
 			<button type="button" class="layui-btn layui-btn-warm" id="open-advance">
