图片问题更新

--- a/src/main/resources/static/html/estimate.html
+++ b/src/main/resources/static/html/estimate.html
@@ -165,7 +165,7 @@
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">问题图片</label>
 						<div class="layui-input-block">
-							<div class="layui-carousel imgshow" lay-filter="test1">
+							<div class="layui-carousel imgshow" id = "test11" lay-filter="test1">
 								<div carousel-item="" id="imag">
 								<!-- <div>
 									<img alt="432" src="../images/report/u170.png">
